--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           />
           <h1 class="text-light"><a href="index.html">Gautam Dheer</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="https://twitter.com/gautamdheer7" class="twitter"><i class="bx bxl-twitter"></i></a>
             <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.instagram.com/imgautamdheer/" class="instagram"><i class="bx bxl-instagram"></i></a>
             <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
             <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           </div>
@@ -159,7 +159,7 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Website:</strong> <span>www.gautamdheer.com</span>
+                      <strong>Website:</strong> <span>https://gautamdheer.github.io/</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -183,7 +183,7 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>PhEmailone:</strong>
+                      <strong>Email:</strong>
                       <span>gautamdheer.gh@gmail.com</span>
                     </li>
                     <li>
@@ -226,10 +226,8 @@
           <div class="section-title">
             <h2>Facts</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Throughout the project, we made sure to maintain open communication and were always available to address any questions or concerns. I also made sure to deliver all project materials in a timely manner and to the highest quality standards.
+
             </p>
           </div>
 
