--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="https://twitter.com/gautamdheer7" class="twitter"><i class="bx bxl-twitter"></i></a>
             <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
             <a href="https://www.instagram.com/imgautamdheer/" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+            <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
             <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           </div>
         </div>
