--- a/index.html
+++ b/index.html
@@ -309,10 +309,7 @@
           <div class="section-title">
             <h2>Skills</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              A Full Stack Developer is responsible for designing and developing both client-side and server-side software applications. This requires a range of technical skills, including proficiency in programming languages such as HTML, CSS, JavaScript, and SQL. Additionally, full stack developers should have experience working with web application frameworks like Angular, React, and Node.js, as well as an understanding of database management and software testing. Communication skills, problem-solving abilities, and a willingness to continuously learn and adapt to new technologies are also essential for a successful career as a full stack developer.
             </p>
           </div>
 
@@ -516,10 +513,7 @@
           <div class="section-title">
             <h2>Portfolio</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              A strong portfolio can set you apart in a competitive industry and help you land new opportunities.
             </p>
           </div>
 
@@ -851,19 +845,17 @@
                 <div class="testimonial-item" data-aos="fade-up">
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Proin iaculis purus consequat sem cure digni ssim donec
-                    porttitora entum suscipit rhoncus. Accusantium quam,
-                    ultricies eget id, aliquam eget nibh et. Maecen aliquam,
-                    risus at semper.
+                    Gautam is a software expert with strong programming experience in full stack and web technology. A productive, proactive and self motivated engineer with strong technical capability .
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="assets/img/testimonials/testimonials-1.jpg"
+                    src="https://media.licdn.com/dms/image/C4E03AQH7xDkZqZWnjw/profile-displayphoto-shrink_100_100/0/1531475366274?e=1687392000&v=beta&t=hlABkHrsXyGeGLLzjGzj8l-PG8erunAM7WYoelxjx8M"
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  
+                  <h3>Sanjeev Sinha</h3>
+                  <h4>CEO and Co-Founder at Parintek Innovations</h4>
                 </div>
               </div>
               <!-- End testimonial item -->
@@ -876,19 +868,16 @@
                 >
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Export tempor illum tamen malis malis eram quae irure esse
-                    labore quem cillum quid cillum eram malis quorum velit fore
-                    eram velit sunt aliqua noster fugiat irure amet legam anim
-                    culpa.
+                    For the time I have known Gautam, he has been a sincere and hardworking full stack developer. He has great acumen in WordPress, Laravel and JS, and has contributed significantly towards the company's website. He has also been a valuable asset in handling various client projects. I wish him all the best for his next adventure.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="assets/img/testimonials/testimonials-2.jpg"
+                    src="https://media.licdn.com/dms/image/D4D03AQEsfzTw9E8lqA/profile-displayphoto-shrink_100_100/0/1681745823838?e=1687392000&v=beta&t=d6eJ-l1WGAoK6uiZztbaYWCfEnE4L88CjFzysDZrzWM"
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <h3>Shobhit Tankha</h3>
+                  <h4>🧿 Sic Parvis Magna</h4>
                 </div>
               </div>
               <!-- End testimonial item -->
@@ -901,18 +890,20 @@
                 >
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Enim nisi quem export duis labore cillum quae magna enim
-                    sint quorum nulla quem veniam duis minim tempor labore quem
-                    eram duis noster aute amet eram fore quis sint minim.
+      Gautam is a seasoned Full Stack Developer who is more well versed and experienced in technologies like WordPress, PHP, Laravel and JavaScript.
+      At #ImpactQA, he managed the ImpactQA's website directly in addition to the client side development. He understands, documents the requirements well before creating a design and then proceeding to the implementation of the website. He is also very meticulous upcoming risks in the project thinks out for the box to mitigate them.
+      He has also mentored two interns and helped them become learn Full Stack technology in past 6 months.
+
+      With his never give up attitude he has a good future ahead and I wish him all the success in all his future endeavors.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="assets/img/testimonials/testimonials-3.jpg"
+                    src="https://media.licdn.com/dms/image/C5603AQGSqqENUvBQTg/profile-displayphoto-shrink_100_100/0/1660806885359?e=1687392000&v=beta&t=Oo5XnVcm54FUTUu7qqI3kk0Vqtmkqt2COt8m83VQPvw"
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
+                  <h3>Munish Sawhney</h3>
+                  <h4>Sr Technical Manager @ NGI</h4>
                 </div>
               </div>
               <!-- End testimonial item -->
