update in index file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>TEST Gautam Dheer - Portfolio</title>
+    <title>Gautam Dheer - Portfolio</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -849,8 +849,7 @@
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="https://media.licdn.com/dms/image/C4E03AQH7xDkZqZWnjw/profile-displayphoto-shrink_100_100/0/1531475366274?e=1687392000&v=beta&t=hlABkHrsXyGeGLLzjGzj8l-PG8erunAM7WYoelxjx8M"
-                    class="testimonial-img"
+                    src="/assets/img/sanjeev.jpg"
                     alt=""
                   />
                   
@@ -872,7 +871,7 @@
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="https://media.licdn.com/dms/image/D4D03AQEsfzTw9E8lqA/profile-displayphoto-shrink_100_100/0/1681745823838?e=1687392000&v=beta&t=d6eJ-l1WGAoK6uiZztbaYWCfEnE4L88CjFzysDZrzWM"
+                    src="/assets/img/shobhit.jpg"
                     class="testimonial-img"
                     alt=""
                   />
@@ -898,7 +897,7 @@
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="https://media.licdn.com/dms/image/C5603AQGSqqENUvBQTg/profile-displayphoto-shrink_100_100/0/1660806885359?e=1687392000&v=beta&t=Oo5XnVcm54FUTUu7qqI3kk0Vqtmkqt2COt8m83VQPvw"
+                    src="/assets/img/munishjpg.jpg"
                     class="testimonial-img"
                     alt=""
                   />
