remove extra testimonials

--- a/index.html
+++ b/index.html
@@ -55,11 +55,23 @@
           />
           <h1 class="text-light"><a href="index.html">Gautam Dheer</a></h1>
           <div class="social-links mt-3 text-center">
-            <a target="_blank" href="https://twitter.com/gautamdheer7" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a
+              target="_blank"
+              href="https://twitter.com/gautamdheer7"
+              class="twitter"
+              ><i class="bx bxl-twitter"></i
+            ></a>
             <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a target="_blank" href="https://www.instagram.com/imgautamdheer/" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a
+              target="_blank"
+              href="https://www.instagram.com/imgautamdheer/"
+              class="instagram"
+              ><i class="bx bxl-instagram"></i
+            ></a>
             <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-            <a target="_blank" href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            <a target="_blank" href="#" class="linkedin"
+              ><i class="bx bxl-linkedin"></i
+            ></a>
           </div>
         </div>
 
@@ -159,7 +171,8 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Website:</strong> <span>https://gautamdheer.github.io/</span>
+                      <strong>Website:</strong>
+                      <span>https://gautamdheer.github.io/</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -226,8 +239,10 @@
           <div class="section-title">
             <h2>Facts</h2>
             <p>
-              Throughout the project, we made sure to maintain open communication and were always available to address any questions or concerns. I also made sure to deliver all project materials in a timely manner and to the highest quality standards.
-
+              Throughout the project, we made sure to maintain open
+              communication and were always available to address any questions
+              or concerns. I also made sure to deliver all project materials in
+              a timely manner and to the highest quality standards.
             </p>
           </div>
 
@@ -309,7 +324,17 @@
           <div class="section-title">
             <h2>Skills</h2>
             <p>
-              A Full Stack Developer is responsible for designing and developing both client-side and server-side software applications. This requires a range of technical skills, including proficiency in programming languages such as HTML, CSS, JavaScript, and SQL. Additionally, full stack developers should have experience working with web application frameworks like Angular, React, and Node.js, as well as an understanding of database management and software testing. Communication skills, problem-solving abilities, and a willingness to continuously learn and adapt to new technologies are also essential for a successful career as a full stack developer.
+              A Full Stack Developer is responsible for designing and developing
+              both client-side and server-side software applications. This
+              requires a range of technical skills, including proficiency in
+              programming languages such as HTML, CSS, JavaScript, and SQL.
+              Additionally, full stack developers should have experience working
+              with web application frameworks like Angular, React, and Node.js,
+              as well as an understanding of database management and software
+              testing. Communication skills, problem-solving abilities, and a
+              willingness to continuously learn and adapt to new technologies
+              are also essential for a successful career as a full stack
+              developer.
             </p>
           </div>
 
@@ -406,7 +431,13 @@
           <div class="section-title">
             <h2>Resume</h2>
             <p>
-              Full stack developer with 7+ years of experience, I am skilled in both front-end and back-end development. On the front-end, I am proficient in HTML, CSS, JavaScript, and various front-end frameworks such as React, Angular, and Vue.js. On the back-end, I have experience with server-side languages such as Python, Java, and PHP, as well as database technologies such as MySQL, MongoDB, and PostgreSQL.
+              Full stack developer with 7+ years of experience, I am skilled in
+              both front-end and back-end development. On the front-end, I am
+              proficient in HTML, CSS, JavaScript, and various front-end
+              frameworks such as React, Angular, and Vue.js. On the back-end, I
+              have experience with server-side languages such as Python, Java,
+              and PHP, as well as database technologies such as MySQL, MongoDB,
+              and PostgreSQL.
             </p>
           </div>
 
@@ -513,7 +544,8 @@
           <div class="section-title">
             <h2>Portfolio</h2>
             <p>
-              A strong portfolio can set you apart in a competitive industry and help you land new opportunities.
+              A strong portfolio can set you apart in a competitive industry and
+              help you land new opportunities.
             </p>
           </div>
 
@@ -741,9 +773,11 @@
           <div class="section-title">
             <h2>Services</h2>
             <p>
-              Over these pasts years, I helped big, small companies and startups building and shipping their product. I've collaborate with
-              teams — on site or remote — to build on a wide product range. Working with CEO on product strategy or with designers and
-              developpers on design systems.
+              Over these pasts years, I helped big, small companies and startups
+              building and shipping their product. I've collaborate with teams —
+              on site or remote — to build on a wide product range. Working with
+              CEO on product strategy or with designers and developpers on
+              design systems.
             </p>
           </div>
 
@@ -752,8 +786,7 @@
               <div class="icon"><i class="bi bi-briefcase"></i></div>
               <h4 class="title"><a href="">SASS Prodcut</a></h4>
               <p class="description">
-                Building and shipping ideas, from features to complete
-                product.
+                Building and shipping ideas, from features to complete product.
               </p>
             </div>
             <div
@@ -764,8 +797,8 @@
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
               <h4 class="title"><a href="">Desgin System</a></h4>
               <p class="description">
-                Working on your product concistency and helping others
-                getting onboard.
+                Working on your product concistency and helping others getting
+                onboard.
               </p>
             </div>
             <div
@@ -776,8 +809,8 @@
               <div class="icon"><i class="bi bi-bar-chart"></i></div>
               <h4 class="title"><a href="">Wordpress Training</a></h4>
               <p class="description">
-                Providing customized WordPress training ensures you are confident
-                updating and maintaining your website.
+                Providing customized WordPress training ensures you are
+                confident updating and maintaining your website.
               </p>
             </div>
             <div
@@ -788,8 +821,8 @@
               <div class="icon"><i class="bi bi-binoculars"></i></div>
               <h4 class="title"><a href="">Website</a></h4>
               <p class="description">
-                Telling a story that will engage your target audience to
-                your product.
+                Telling a story that will engage your target audience to your
+                product.
               </p>
             </div>
             <div
@@ -800,8 +833,8 @@
               <div class="icon"><i class="bi bi-brightness-high"></i></div>
               <h4 class="title"><a href="">Branding</a></h4>
               <p class="description">
-                Creating a brand appealing to your users and customers
-                that align your strategy.
+                Creating a brand appealing to your users and customers that
+                align your strategy.
               </p>
             </div>
             <div
@@ -812,9 +845,9 @@
               <div class="icon"><i class="bi bi-calendar4-week"></i></div>
               <h4 class="title"><a href="">Social Media Integration</a></h4>
               <p class="description">
-                Social media integration enables your website to post updates to Facebook, displays a Twitter feed, and links to your social media accounts.
-
-
+                Social media integration enables your website to post updates to
+                Facebook, displays a Twitter feed, and links to your social
+                media accounts.
               </p>
             </div>
           </div>
@@ -845,14 +878,14 @@
                 <div class="testimonial-item" data-aos="fade-up">
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Gautam is a software expert with strong programming experience in full stack and web technology. A productive, proactive and self motivated engineer with strong technical capability .
+                    Gautam is a software expert with strong programming
+                    experience in full stack and web technology. A productive,
+                    proactive and self motivated engineer with strong technical
+                    capability .
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
-                  <img
-                    src="/assets/img/sanjeev.jpg"
-                    alt=""
-                  />
-                  
+                  <img src="/assets/img/sanjeev.jpg" alt="" />
+
                   <h3>Sanjeev Sinha</h3>
                   <h4>CEO and Co-Founder at Parintek Innovations</h4>
                 </div>
@@ -867,7 +900,12 @@
                 >
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    For the time I have known Gautam, he has been a sincere and hardworking full stack developer. He has great acumen in WordPress, Laravel and JS, and has contributed significantly towards the company's website. He has also been a valuable asset in handling various client projects. I wish him all the best for his next adventure.
+                    For the time I have known Gautam, he has been a sincere and
+                    hardworking full stack developer. He has great acumen in
+                    WordPress, Laravel and JS, and has contributed significantly
+                    towards the company's website. He has also been a valuable
+                    asset in handling various client projects. I wish him all
+                    the best for his next adventure.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
@@ -889,11 +927,18 @@
                 >
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-      Gautam is a seasoned Full Stack Developer who is more well versed and experienced in technologies like WordPress, PHP, Laravel and JavaScript.
-      At #ImpactQA, he managed the ImpactQA's website directly in addition to the client side development. He understands, documents the requirements well before creating a design and then proceeding to the implementation of the website. He is also very meticulous upcoming risks in the project thinks out for the box to mitigate them.
-      He has also mentored two interns and helped them become learn Full Stack technology in past 6 months.
-
-      With his never give up attitude he has a good future ahead and I wish him all the success in all his future endeavors.
+                    Gautam is a seasoned Full Stack Developer who is more well
+                    versed and experienced in technologies like WordPress, PHP,
+                    Laravel and JavaScript. At #ImpactQA, he managed the
+                    ImpactQA's website directly in addition to the client side
+                    development. He understands, documents the requirements well
+                    before creating a design and then proceeding to the
+                    implementation of the website. He is also very meticulous
+                    upcoming risks in the project thinks out for the box to
+                    mitigate them. He has also mentored two interns and helped
+                    them become learn Full Stack technology in past 6 months.
+                    With his never give up attitude he has a good future ahead
+                    and I wish him all the success in all his future endeavors.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
@@ -903,56 +948,6 @@
                   />
                   <h3>Munish Sawhney</h3>
                   <h4>Sr Technical Manager @ NGI</h4>
-                </div>
-              </div>
-              <!-- End testimonial item -->
-
-              <div class="swiper-slide">
-                <div
-                  class="testimonial-item"
-                  data-aos="fade-up"
-                  data-aos-delay="300"
-                >
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Fugiat enim eram quae cillum dolore dolor amet nulla culpa
-                    multos export minim fugiat minim velit minim dolor enim duis
-                    veniam ipsum anim magna sunt elit fore quem dolore labore
-                    illum veniam.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                  <img
-                    src="assets/img/testimonials/testimonials-4.jpg"
-                    class="testimonial-img"
-                    alt=""
-                  />
-                  <h3>Matt Brandon</h3>
-                  <h4>Freelancer</h4>
-                </div>
-              </div>
-              <!-- End testimonial item -->
-
-              <div class="swiper-slide">
-                <div
-                  class="testimonial-item"
-                  data-aos="fade-up"
-                  data-aos-delay="400"
-                >
-                  <p>
-                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Quis quorum aliqua sint quem legam fore sunt eram irure
-                    aliqua veniam tempor noster veniam enim culpa labore duis
-                    sunt culpa nulla illum cillum fugiat legam esse veniam culpa
-                    fore nisi cillum quid.
-                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  </p>
-                  <img
-                    src="assets/img/testimonials/testimonials-5.jpg"
-                    class="testimonial-img"
-                    alt=""
-                  />
-                  <h3>John Larson</h3>
-                  <h4>Entrepreneur</h4>
                 </div>
               </div>
               <!-- End testimonial item -->
@@ -968,9 +963,10 @@
         <div class="container">
           <div class="section-title">
             <h2>Contact</h2>
-            <p style="font-weight: 700;">
-              I’m interested in freelance opportunities – especially ambitious or large projects. However, if you have other request or question, don’t hesitate to use the form.
-
+            <p style="font-weight: 700">
+              I’m interested in freelance opportunities – especially ambitious
+              or large projects. However, if you have other request or question,
+              don’t hesitate to use the form.
             </p>
           </div>
 
