--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
               <form
-                action="forms/contact.php"
+                action="contact.php"
                 method="post"
                 role="form"
                 class="php-email-form"
