contact file added

--- a/index.html
+++ b/index.html
@@ -1000,8 +1000,16 @@
               </div>
             </div>
 
-            <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-              <form
+            <div class="col-lg-6 mt-5 mt-lg-0">
+        <div class="mb-4">
+              <h2><span class='bi bi-calendar3'></span> Let's Connect</h2>
+            </div>
+    <!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/gautamdheer/30min" style="min-width:320px;height:630px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
+
+              <!-- <form
                 action="contact.php"
                 method="post"
                 role="form"
@@ -1058,7 +1066,7 @@
                 <div class="text-center">
                   <button type="submit">Send Message</button>
                 </div>
-              </form>
+              </form> -->
             </div>
           </div>
         </div>
