change in resume description

--- a/index.html
+++ b/index.html
@@ -431,13 +431,8 @@
           <div class="section-title">
             <h2>Resume</h2>
             <p>
-              Full stack developer with 7+ years of experience, I am skilled in
-              both front-end and back-end development. On the front-end, I am
-              proficient in HTML, CSS, JavaScript, and various front-end
-              frameworks such as React, Angular, and Vue.js. On the back-end, I
-              have experience with server-side languages such as Python, Java,
-              and PHP, as well as database technologies such as MySQL, MongoDB,
-              and PostgreSQL.
+              Dynamic Fullstack Web Developer with over 7 years of expertise dedicated to driving excellence at IvServ Technologies, Inc. I excel in delivering impactful solutions, reducing rework by 22% and trimming costs by 15%, thus elevating company performance. My track record boasts consistently high user experience scores, showcasing a remarkable 55% surge in satisfaction for IvServ Technologies, Inc. I am deeply passionate about crafting top-tier web applications and have a notable achievement in earning recognition for Best Navigation and Structure on one of my projects. I am committed to continuing my journey of innovation and success, leveraging my skills to deliver exceptional results for IvServ Technologies, Inc., and its esteemed client, Impetus Technologies.
+
             </p>
           </div>
 
