--- a/index.html
+++ b/index.html
@@ -435,8 +435,10 @@
 
             </p>
           </div>
-
           <div class="row">
+            <object data="/assets/pdf/Gautam-Dheer-SDE-Resume.pdf" type="application/pdf" width="100%" height="500px"></object>
+          </div>
+          <!-- <div class="row">
             <div class="col-lg-6" data-aos="fade-up">
               <h3 class="resume-title">Sumary</h3>
               <div class="resume-item pb-0">
@@ -528,7 +530,7 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <!-- End Resume Section -->
