--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               ><i class="bx bxl-instagram"></i
             ></a>
             <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-            <a target="_blank" href="#" class="linkedin"
+            <a target="_blank" href="https://www.linkedin.com/in/gautam-dheer/" class="linkedin"
               ><i class="bx bxl-linkedin"></i
             ></a>
           </div>
