update skills and favicon

--- a/index.html
+++ b/index.html
@@ -341,12 +341,12 @@
           <div class="row skills-content">
             <div class="col-lg-6" data-aos="fade-up">
               <div class="progress">
-                <span class="skill">HTML <i class="val">100%</i></span>
+                <span class="skill">PHP <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="100"
+                    aria-valuenow="80"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -354,7 +354,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">CSS <i class="val">90%</i></span>
+                <span class="skill">WordPress/CMS <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -382,7 +382,7 @@
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <div class="progress">
-                <span class="skill">PHP <i class="val">80%</i></span>
+                <span class="skill">Laravel Framework <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -395,7 +395,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+                <span class="skill">AWS Services <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -408,17 +408,18 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Photoshop <i class="val">55%</i></span>
+                <span class="skill">ReactJS/NodeJS<i class="val">75%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="55"
+                    aria-valuenow="75"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
@@ -431,7 +432,7 @@
           <div class="section-title">
             <h2>Resume</h2>
             <p>
-              Dynamic Fullstack Web Developer with over 7 years of expertise dedicated to driving excellence at IvServ Technologies, Inc. I excel in delivering impactful solutions, reducing rework by 22% and trimming costs by 15%, thus elevating company performance. My track record boasts consistently high user experience scores, showcasing a remarkable 55% surge in satisfaction for IvServ Technologies, Inc. I am deeply passionate about crafting top-tier web applications and have a notable achievement in earning recognition for Best Navigation and Structure on one of my projects. I am committed to continuing my journey of innovation and success, leveraging my skills to deliver exceptional results for IvServ Technologies, Inc., and its esteemed client, Impetus Technologies.
+              Dynamic Fullstack Web Developer with over 7+ years of expertise dedicated to driving excellence at IvServ Technologies, Inc. I excel in delivering impactful solutions, reducing rework by 22% and trimming costs by 15%, thus elevating company performance. My track record boasts consistently high user experience scores, showcasing a remarkable 55% surge in satisfaction for IvServ Technologies, Inc. I am deeply passionate about crafting top-tier web applications and have a notable achievement in earning recognition for Best Navigation and Structure on one of my projects. I am committed to continuing my journey of innovation and success, leveraging my skills to deliver exceptional results for IvServ Technologies, Inc., and its esteemed client, Impetus Technologies.
 
             </p>
           </div>
