--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <img src="assets/img/IMG_1081.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-              <h3>UI/UX Designer &amp; Web Developer.</h3>
+              <h3>Senior Specialist Engineer</h3>
               <p class="fst-italic">
                 I am a dedicated and hardworking individual with a passion for
                 web development. I have a strong attention to detail and strive
