--- a/index.html
+++ b/index.html
@@ -566,19 +566,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-1.jpg"
+                  src="assets/img/portfolio/anybiz.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-1.jpg"
+                    href="https://anybiz.io/"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="App 1"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://anybiz.io/" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -588,19 +588,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-2.jpg"
+                  src="assets/img/portfolio/d&B.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-2.jpg"
+                    href="assets/img/portfolio/d&B.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Web 3"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://www.dnb.co.in/" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -610,19 +610,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-3.jpg"
+                  src="assets/img/portfolio/ImpactQ.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-3.jpg"
+                    href="assets/img/portfolio/ImpactQ.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="App 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://impactqa.com/" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -632,19 +632,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-4.jpg"
+                  src="assets/img/portfolio/pandiahealth.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-4.jpg"
+                    href="assets/img/portfolio/pandiahealth.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Card 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://www.pandiahealth.com/" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -654,19 +654,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-5.jpg"
+                  src="assets/img/portfolio/v2kart.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-5.jpg"
+                    href="assets/img/portfolio/v2kart.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Web 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://www.v2retail.com/" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -676,19 +676,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-6.jpg"
+                  src="assets/img/portfolio/wforwoman.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-6.jpg"
+                    href="assets/img/portfolio/wforwoman.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="App 3"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="https://wforwoman.com/" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
