--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                 />
                 <div class="portfolio-links">
                   <a
-                    href="https://anybiz.io/"
+                    href="assets/img/portfolio/anybiz.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="App 1"
