update footer code

--- a/anna247/index.html
+++ b/anna247/index.html
@@ -115,7 +115,7 @@
       </div>
     </section>
 
-    <footer class="bg-gray-900 py-6 sm:hidden">
+    <footer class="bg-gray-900 py-6">
         <div class="container mx-auto px-4">
           <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
             <!-- Column 1 -->
