update landing changes

--- a/anna247/index.html
+++ b/anna247/index.html
@@ -7,19 +7,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body class="bg-black text-white font-sans">
+  <body class="bg-black text-white font-robocondo">
     <!-- Hero Section -->
     <section class="relative bg-black">
        
-      <div
-        class="container mx-auto px-4 bg-[url('img/bg.png')] h-auto bg-cover"
-      >
+      <div class="bg-no-repeat bg-[url('img/bg.png')] bg-bottom bg-[background-size:100%] md:bg-cover">
         <div
-          class="flex flex-col md:flex-row items-center justify-center md:justify-between"
+          class="container mx-auto flex flex-col md:flex-row items-center justify-center md:justify-between"
         >
           <!-- Offer Info -->
-          <div class="text-center py-20 md:text-left mb-12 md:mb-0">
-            <div class="flex justify-center mb-8">
+          <div class="text-center py-4 md:text-left md:mb-12">
+            <div class="flex justify-center mb-4">
               <a target="_blank" href="https://www.anna247.in/"><img src="img/logo.png" alt="Bonus Offer" class="w-50" /></a>
             </div>
             <h1 class="text-red-500 text-center text-4xl mb-1 font-robocondo">
@@ -35,27 +33,25 @@
               >
             </p>
 
-            <div class="girl-bg my-5 border py-10">
-              <p
-                class="text-white uppercase flex justify-center font-robocondo"
-              >
+            <div class="border" style="border-radius: 10px;">
+            <div class="girl-bg my-5">
+            <div
+                class="text-gray-400 uppercase flex justify-center font-robocondo">
                 Get Your ID
-              </p>
-              <div class="flex justify-center">
-                <button
-                  class="bg-green-600 px-4 py-2 my-4 text-white rounded-full font-bold hover:bg-green-700"
-                >
-                  <a target="_blank"
-                    href="https://api.whatsapp.com/send/?phone=%2B918595707468&text&type=phone_number&app_absent=0"
-                    class="uppercase"
-                    target="_blank"
-                    >WhatsApp Now</a
-                  >
-                </button>
-              </div>
-
-              <img src="img/girl-bg.png" class="size-45" alt="" />
             </div>
+              <div class="flex justify-center">
+                <a target="_blank"
+                href="https://api.whatsapp.com/send/?phone=%2B918595707468&text&type=phone_number&app_absent=0"
+                class="uppercase"
+                target="_blank"
+                ><img src="img/whatsup-btn.png" alt="whatsapp button" class="my-4"></a
+              >
+              </div>
+              </div>
+              <div class="w-full md:w-1/2">
+                <img src="img/girl-bg.png" alt="Background of a girl" class="w-full h-auto" />
+              </div>              
+          </div>
           </div>
           <!-- Image -->
         </div>
