changesa anna landing

--- a/anna247/index.html
+++ b/anna247/index.html
@@ -11,13 +11,13 @@
     <!-- Hero Section -->
     <section class="relative bg-black">
       <div
-        class="bg-no-repeat bg-[url('img/bg.png')] bg-bottom bg-[background-size:100%] md:bg-cover"
+        class="bg-no-repeat bg-[url('img/bg.png')] bg-bottom :bg-[background-size:100%] bg-contain md:bg-cover"
       >
         <div
           class="container mx-auto flex flex-col md:flex-row items-center justify-center md:justify-between"
         >
           <!-- Offer Info -->
-          <div class="text-center py-4 md:text-left md:mb-12">
+          <div class="text-center md:text-left">
             <div class="flex justify-center mb-4">
               <a target="_blank" href="https://www.anna247.in/"
                 ><img src="img/logo.png" alt="Bonus Offer" class="w-50"
@@ -36,7 +36,7 @@
               >
             </p>
 
-            <div class="border" style="border-radius: 10px">
+            <div class="border shadow-2xl shadow-slate-700" style="border-radius: 10px">
               <div class="girl-bg my-5">
                 <div
                   class="text-gray-400 uppercase flex justify-center font-robocondo"
@@ -56,7 +56,7 @@
                   /></a>
                 </div>
               </div>
-              <div class="w-full md:w-1/2">
+              <div class="w-full">
                 <img
                   src="img/girl-bg.png"
                   alt="Background of a girl"
@@ -375,7 +375,7 @@
           </p>
           <p>
           5) We may transfer Player’s Information in the event of that we transfer or sell our business or any part of it; including in the event of insolvency.
-          </p>
+          </p>vc 
           <p>
           6) If at any time Player wishes us to stop processing Player’s Information for the above purposes, then Player must contact us and we will take the appropriate steps to stop doing so.
           </p>
