changes in images

--- a/anna2/index.html
+++ b/anna2/index.html
@@ -158,7 +158,7 @@
 
                     <!-- Column 5 (Increase Space for Image) -->
                     <div class="w-full my-2 md:col-span-2">
-                        <img src="/img/brands-logo.png" class="w-full">
+                        <img src="../../brands-logo.png" class="w-full">
                     </div>
                 </div>
 
