--- a/anna2/index.html
+++ b/anna2/index.html
@@ -119,10 +119,8 @@
             <div class="mx-auto px-4">
                 <div class="grid grid-cols-1 md:grid-cols-8 gap-4">
                     <!-- Column 1 -->
-                    <div class="text-center md:text-left flex my-2 md:col-span-2">
-                        <p class="text-white text-lg justify-between font-robocondo">
-                            ©2007-2024 Anna Exchange
-                        </p>
+                    <div class="text-center md:text-left my-2 md:col-span-2 md:flex block">
+                        <p class="text-white text-lg justify-between font-robocondo"> ©2007-2024 Anna Exchange </p>
                         <div class="flex px-2 flex-wrap justify-center gap-2">
                             <a target="_blank" class="w-6" href="#"><img src="img/insta.png"
                                     alt="" /></a>
