--- a/anna2/index.html
+++ b/anna2/index.html
@@ -64,7 +64,7 @@
                                             <button type="button"
                                                 class="absolute right-4 top-3 text-gray-400 focus:outline-none"
                                                 onclick="togglePassword()">
-                                                <img src="/img/eye.svg" class="h-6 w-6 mt-2" alt="eye">
+                                                <img src="../img/eye.svg" class="h-6 w-6 mt-2" alt="eye">
                                             </button>
                                         </div>
 
