--- a/anna2/index.html
+++ b/anna2/index.html
@@ -64,7 +64,7 @@
                                         <button type="button"
                                             class="absolute right-4 top-3 text-gray-400 focus:outline-none"
                                             onclick="togglePassword()">
-                                            <img src="anna2/img/eye.svg" class="h-6 w-6 sm:mt-2 mt-0" alt="eye">
+                                            <img src="/anna2/img/eye.svg" class="h-6 w-6 sm:mt-2 mt-0" alt="eye">
                                         </button>
                                     </div>
 
@@ -158,7 +158,7 @@
 
                 <!-- Column 5 (Increase Space for Image) -->
                 <div class="w-full my-2 sm:col-span-2 order-6">
-                    <img src="anna2/img/brands-logo.png" class="w-full">
+                    <img src="/anna2/img/brands-logo.png" class="w-full">
                 </div>
             </div>
 
@@ -176,7 +176,7 @@
                 <!-- Column 2 (Image) -->
                 <div>
                     <p class="mt-2" style="float: right;">
-                        <img src="anna2/img/begamble.svg" alt="" />
+                        <img src="/anna2/img/begamble.svg" alt="" />
                     </p>
                 </div>
             </div>
